Change play icon to speaker icon. Fix overlapping icon over text in search box.

--- a/src/app/components/MainNavigation.scss
+++ b/src/app/components/MainNavigation.scss
@@ -1,10 +1,17 @@
 .main-navigation {
   margin-right: 25px;
-  .input-field input[type=search],  {
-    font-size: 1.5em;
-    &, &:focus {
-      border-left: 1px solid #ccc;
-      border-right: 1px solid #ccc;
+  .input-field {
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+
+    input[type=search] {
+      box-sizing: border-box;
+      font-size: 1.5em;
     }
+
+    .tts-player-icon {
+      right: .5rem !important;
+    }
+
   }
 }
